# aigrids

./: .gitignore  CONTRIBUTING.md  LICENSE_bk  README.md  pyproject.toml
docs/: buildingelectricity.md  opfdata.md  powergraph.md  solarcube.md  windfarm.md
src/aidotgrids/: load.py
src/aigrids/: buildingelectricity.py  load.py  opfdata.py  powergraph.py  solarcube.py  windfarm.py
tests/: test_buildingelectricity.py  test_opfdata.py  test_powergraph.py  test_solarcube.py  test_windfarm.py
