[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidotgrids"
version = "0.0.2"
description = "Datasets, Models and Methods for Power System Foundation Models"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Arsam Aryandoust", email = "arsam.aryandoust@eonerc.rwth-aachen.de" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = [
  "Artificial Intelligence", 
  "Machine Learning", 
  "Power Systems",
]
dependencies = [
  "requests>=2.0",
  "numpy>=2.0",
  "pandas>=2.0",
  "h5py>=3.0.0",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Source = "https://github.com/AI-grids/aidotgrids"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aidotgrids*"]

[tool.ruff]
line-length = 88